# SmallPhysicsEngine

./: .gitignore  Basic_structure.txt  CMakeLists.txt  README.md  makefile
exec_src/: all_move.cpp  all_move_interactive.cpp  different_masses.cpp  lots.cpp  run.cpp  single_move.cpp  single_move_gravity.cpp  view_texture.cpp
inc/: Border.hpp  FPSCapper.hpp  Gravity.hpp  Immovable.hpp  ImmovableContainer.hpp  ImmovableParticleCollider.hpp  InputHandler.hpp  Math.hpp  MouseInteraction.hpp  MouseState.hpp  Particle.hpp  ParticleContainer.hpp  ParticleMover.hpp  SDLBase.hpp  SDLHandler.hpp  SDLPointer.hpp  SDLRenderer.hpp  SDLTexture.hpp  SDLWindow.hpp  SimpleParticleCollider.hpp  SimpleParticleModel.hpp  Simulation.hpp  SimulationBuilder.hpp  SurfaceCollision.hpp  Utility.hpp
src/: Border.cpp  CMakeLists.txt  Gravity.cpp  Immovable.cpp  ImmovableParticleCollider.cpp  InputHandler.cpp  Math.cpp  MouseInteraction.cpp  MouseState.cpp  Particle.cpp  ParticleMover.cpp  SDLBase.cpp  SDLRenderer.cpp  SDLTexture.cpp  SDLWindow.cpp  SimpleParticleCollider.cpp  SimpleParticleModel.cpp  Simulation.cpp  SimulationBuilder.cpp  SurfaceCollision.cpp  Utility.cpp
src/exec/: all_move.cpp  all_move_interactive.cpp  different_masses.cpp  single_move.cpp  single_move_gravity.cpp  view_texture.cpp
